logs/featurizer_20251130_235611.log
  File "/Users/mel/Downloads/Crypto-Project-FOAI_edited-mel/features/featurizer.py", line 1134
    features = self.process_message(message)
    ^
SyntaxError: invalid syntax
